--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -27,20 +27,29 @@
   width: 250px;
   height: 100%;
   margin-left: 0;
+  overflow: hidden;
   background-color: $atum-sidebar-bg;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,.2) 100%);
   transition: all .5s ease;
   transform: translateX(-250px);
-  &::after {
+  .sidebar-brand {
     position: absolute;
-    bottom: -135px;
-    left: -35px;
-    z-index: -2;
-    font-family: FontAwesome;
-    font-size: 24rem;
-    color: $atum-sidebar-bg;
-    // content: "\f1aa";
-    transform: rotate(-17deg);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    overflow: hidden;
+    &::after {
+      position: absolute;
+      bottom: -135px;
+      left: -35px;
+      font-family: FontAwesome;
+      font-size: 24rem;
+      color: $atum-sidebar-bg;
+      content: "\f1aa";
+      transform: rotate(-17deg);
+    }
   }
   &::before {
     position: absolute;
@@ -362,30 +371,37 @@
 }
 
 // Sidebar closed hover
-.sidebar-wrapper {
-  z-index: 10;
-}
 .closed {
-  .sidebar-item-title, .collapse-arrow::after {
-    display: none !important;
+  .sidebar-wrapper {
+    z-index: 10;
+    overflow: visible;
+  }
+  .sidebar-item-title, .parent .collapse-arrow::after, .parent .parent .collapse-arrow::after {
+    display: none;
   }
   .main-nav {
     width: 55px;
     overflow: visible;
     > li {
       position: relative;
+      transition: all .5s ease;
       .sidebar-item-title {
         position: absolute;
         top: 0;
         left: 100%;
-        width: 210px;
-        padding: 0 15px;
+        width: 220px;
+        padding: 0 13px;
+        font-size: .9rem;
         font-weight: bold;
         background-color: $atum-template-color;
-        border-top-right-radius: $border-radius;
+        border-radius: 0 $border-radius $border-radius 0;
+      }
+      &.parent .sidebar-item-title {
+        border-radius: 0 $border-radius 0 0;
       }
       &:hover .sidebar-item-title {
-        display: block !important;
+        display: block;
+        opacity: 1;
       }
       &:hover .collapse {
         position: absolute;
@@ -396,6 +412,7 @@
     }
     .collapse-level-1 {
       padding: 5px 0 10px;
+      margin-top: -1px;
       text-indent: 0;
       background-color: lighten($atum-template-color, 5%);
       border-bottom-right-radius: $border-radius;
@@ -408,18 +425,29 @@
         color: #e2e3f5;
         border: 0;
       }
+      a::before {
+        display: none;
+      }
       .sidebar-item-title {
         position: relative;
         left: 0;
+        font-size: 1rem;
         font-weight: normal;
         background-color: transparent;
+      }
+      li:hover {
+        background-color: $atum-template-color;
+        box-shadow: none;
+      }
+      a:hover {
+        box-shadow: none;
       }
       .sidebar-item-title::before {
         position: absolute;
         top: 0;
         left: 0;
         font-family: FontAwesome;
-        font-size: .5rem;
+        font-size: .4rem;
         color: #e2e3f5;
         content: "\f111";
         opacity: .5;
